tests/fail/null/2.has
function main() : int {
    var y = NULL


    return 0
}